Added Map Area Search. Also fixed a bug in backend where final_data2.json items do not have all the attributes required.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /Backend/build
 .vscode/settings.json
+.VSCodeCounter/2024-12-30_06-51-29/details.md
+.VSCodeCounter/2024-12-30_06-51-29/diff-details.md
+.VSCodeCounter/2024-12-30_06-51-29/diff.csv
+.VSCodeCounter/2024-12-30_06-51-29/diff.md
+.VSCodeCounter/2024-12-30_06-51-29/diff.txt
+.VSCodeCounter/2024-12-30_06-51-29/results.csv
+.VSCodeCounter/2024-12-30_06-51-29/results.json
+.VSCodeCounter/2024-12-30_06-51-29/results.md
+.VSCodeCounter/2024-12-30_06-51-29/results.txt
